--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treine me</title>
+
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
 
@@ -28,7 +30,7 @@
           <br>para você!</h1>
 
           <p>
-            Nós criamos treinos <strong>exclusivos e únicos para você.</strong> 
+            Nós criamos treinos <strong>exclusivos e únicos para você.</strong> <br>
             Invista no seu corpo e <strong>tenha muito mais performance</strong> e qualidade de vida.
           </p>
 
