--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
   <body>
 
     <div class="page">
-      <header>
 
-        <img src="images/treine.me.svg" alt="Treine.me">
-
-        <nav>
+      <nav>
+        <a id="logo" href="#">
+          <img src="images/treine.me.svg" alt="Treine.me">
+        </a>
           <ul>
-            <li>Home</li>
-            <li>Sobre</li>
-            <li>Treinar</li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Treinar</a></li>
           </ul>
         </nav>
-
-      </header>
+      
       <main>
 
         <section>
