--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treine me</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Mulish:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
   </head>
@@ -25,8 +30,7 @@
       <main>
 
         <section>
-          <h1>Treinos <strong>exclusivos</strong>
-          <br>para você!</h1>
+          <h1>Treinos <span>exclusivos</span> para você!</h1>
 
           <p>
             Nós criamos treinos <strong>exclusivos e únicos para você.</strong> <br>
