--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
       </main>
       <footer>
-        fale concosco no instagram <a target="_blank" href="https://www.instagram.com/treine.me/"><strong>@treine.me</strong></a>
+        fale concosco no instagram <a target="_blank" href="#"><strong>@treine.me</strong></a>
       </footer>
     </div>
 
-    <img src="images/balls.svg" alt="Bolinhas decorativas no canto inferior direito.">
+    <img id="balls" src="images/balls.svg" alt="Bolinhas decorativas no canto inferior direito.">
 
   </body>
 </html>
